# twitch-spy

./: .gitignore  Makefile  README.md  commands.txt  config.py  config.yml  dev.sh  format.sh  install-dev-linux.sh  install-dev-windows.bat  install-ffmpeg.sh  install-python.sh  launch_windows.sh  main.py  notes.txt  pyproject.toml  requirements.txt  run-backend.sh  run.sh  setup.sh  setup_linux.sh  twitch_spy.sh  twitch_spy_linux.sh  twitch_spy_win.sh  utils.py
client/: package-lock.json  package.json
client/src/: App.css  App.module.css  App.tsx  index.css
client/src/backend/: backend.ts  models.ts
client/src/components/: AudioPlayer.module.css  AudioPlayer.tsx  CurrentTrackDisplay.module.css  JobList.module.css  JobList.tsx  JobOverview.module.css  JobOverview.tsx  SyncPanel.module.css  SyncPanel.tsx  URLInput.module.css  URLInput.tsx
scripts/: install-ffmpeg.sh  install-python.sh
src/: app.py  chat_log_analyzer.py  chat_logger.py  chat_message.py  config.py  event_dispatcher.py  socket_instance.py  system_logger.py  util.py
src/audio_editor/: hype_detector.py
src/media_downloader/: atomizer.py  config.py  constants.py  content_manager.py  core.py  job_manager.py  platform_handlers.py  queue_manager.py  storage_manager.py  tests.py  youtube.py
src/routes/: home_routes.py
src/twitch_spy/: __init__.py  app.py  cli.py  config.py  event_dispatcher.py  main.py  socket_instance.py  state.py  system_logger.py  utils.py
src/video_downloader/: constants.py  core.py  os_file_queue.py  storage_manager.py  twitch.py  youtube.py
templates/: home.html
tests/media_downloader/: test_atomizer.py  test_storage_manager.py  test_youtube.py
twitch-spy-frontend/: .eslintrc.json  package-lock.json  package.json
twitch-spy-frontend/src/: App.css  App.module.css  App.tsx
util/: chat_log_analyzer.py  file.py  printing.py
(+42 files in other folders)
