[project]
name = "twitch-spy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Toms Bicāns", email = "tomsbicans@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "emoji>=2.15.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-socketio>=5.6.1",
    "google-api-python-client>=2.192.0",
    "moviepy>=2.2.1",
    "mutagen>=1.47.0",
    "psutil>=7.2.2",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "streamlink>=8.2.1",
    "tqdm>=4.67.3",
    "yt-dlp>=2026.3.3",
]

[project.scripts]
twitch-spy = "twitch_spy.main:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
